# Chat-online-by-Rust-Axum

./: README.md  hướng dẫn.md  luồng.txt
backend/: .env  .env.example  Cargo.toml  chat.db  seed.sql
backend/public/: q-manifest.json
backend/public/assets/: BD4fPoai-bundle-graph.json  QkZdYj1C-style.css
backend/src/: db.rs  main.rs  state.rs
backend/src/handlers/: rooms.rs  websocket.rs
backend/src/models/: message.rs  mod.rs  room.rs
frontend/: .env.example  .env.production  build-deploy.ps1  index.html  package.json  prerender.mjs  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/server/: @qwik-city-static-paths.js  entry.preview.js
frontend/src/: entry.dev.tsx  entry.preview.tsx  entry.ssr.tsx  global.css  root.jsx
frontend/src/components/: ChatBox.jsx  Modals.jsx  Sidebar.jsx
frontend/src/routes/: index.jsx
frontend/src/utils/: websocket.js
