[package]
name = "qwikchat-backend"
version = "0.1.0"
edition = "2021"
description = "QwikChat Backend - Rust/Axum WebSocket chat server"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
bcrypt = "0.15"
